--- a/todo
+++ b/todo
@@ -4,45 +4,53 @@ turn game into rts :o
 CODE:
 ------------------
 
+enemies
+  add telegraphed melee stomp type
+  add ranged archer (shows up starting later?)
+
+allies
+  - archer feels weird
+  - blizzard wizard
+    * add slow, fix duration?
+  - chain lightning
+  - buff types
+    * aspd aura
+  - cannon
+
+tuning
+  - movement
+    * melee units should stop in attack range, and not push targets
+    * units should only chase when attack is off cooldown, not preemptively
+    * troops move too quickly, makes kiting feel weird
+      * try adding turn time?
+    * enemies should be able to attack on spawn, instead of waiting full cd
+
+
+
 debugger
   - find/setup vscode debugger for when game hangs
-
-arena
-  - change lose condition to all troops dying
-  - then remove snake (snake could be boss :o)
 
 ui
   - show nice cursor
   - add unit hotbar per class
     * ui bar
     * list of owned units
-    * sorted by class
-    * have selected class global var
 
 controls
-  - make mouse click a control (rally) :(
-    * has to overwrite attacking in Player.init()
-    * attack is a trigger that fires off cooldown
-  - add 1-0 hotkeys
+  - control by class is not fun
+    * units aggro too quickly, can't pull multiple classes off enemies simultaneously
   - experiment with commander wasd vs free mouse
 
 units
-  - movement
-    * melee units should stop in attack range, and don't push enemies
-  - targeting
-    * target closest enemy, not random
   - collision? clustering?
-    * crashes right now :(
   - turn time
     * already in engine
     * see if attacking requires LoS angle
 
 combat
-  - add melee attacks
+  - melee attacks
     * targeted or cone or first enemy hit by cone?
     * needs animation
-  - enemies should target summons
-    * need to change enemy target/aggro behavior
   - add faster projectiles
   - attack timing quantized to beat?
     * classes can have different timings
