added cannon character

--- a/todo
+++ b/todo
@@ -23,6 +23,7 @@ enemies
 
 allies
   - archer feels weird
+  - cannon kinda op?
   - blizzard wizard
     *̶ ̶m̶a̶k̶e̶ ̶a̶r̶e̶a̶ ̶d̶i̶s̶a̶p̶p̶e̶a̶r̶ ̶a̶f̶t̶e̶r̶ ̶t̶i̶m̶e̶
     * make damage not stack
