--- a/todo
+++ b/todo
@@ -9,12 +9,11 @@ should be able to hit enemies without needing to hit the exact center (mainly pr
 necromancers (+healers?) all target same corpse/unit
 
 items:
-no item tooltip when hovering in inv
+items don't display properly in death screen (your build)
 items too big coming from shop
 saving/enter arena with item on cursor?
 
-
-no safety checking on unit spawn (fixed? can have units on top of boss when spawns, no crash)
+crash when spawning units inside each other (fixed for boss though?)
 web build (take out sound?)
 
 
