fixed round starting with too few units on first round, changed fps shortcut, removed wizard from selectable units

--- a/todo
+++ b/todo
@@ -41,7 +41,10 @@ ADDITIONS:
 ------------------
 
 tooling:
+  one-click builds
+  mac/web build?!?!
   debug mode
+    f̶p̶s̶ ̶c̶o̶u̶n̶t̶e̶r̶
     go to level from buy screen
     free gold
 
