--- a/todo
+++ b/todo
@@ -171,6 +171,24 @@ items:
 ̶ ̶ ̶ ̶ ̶e̶n̶r̶a̶g̶e̶ ̶a̶l̶l̶i̶e̶s̶
 
 
+level effects 
+̶ ̶ ̶e̶g̶g̶,̶ ̶h̶a̶t̶c̶h̶e̶s̶ ̶i̶n̶t̶o̶ ̶l̶o̶t̶s̶ ̶o̶f̶ ̶c̶r̶i̶t̶t̶e̶r̶s̶
+  capture point
+    capture for team heal
+    capture for team aspd
+    capture to freeze/damage enemies
+      unkillable enemies that need to be wiped with capture point?
+
+
+allies
+  needler 
+    shoots clip of bullets in random spray around target
+  
+  bomb dropper
+
+  engineer
+    spawns turret
+    
 
 
 enemies
@@ -186,6 +204,10 @@ enemies
   add leapers
   add homing missiler
   add ranged archer
+
+  add minibosses
+    scaled up versions of regular casters
+
 
   add bosses
   ogre boss, big aoe stomp
